# simplekvs

./: .gitignore  Cargo.toml  LICENSE  README.md  abi.proto
examples/: client.rs  dummy_server.rs
src/: error.rs  pb.rs  storage.rs
src/pb/: abi.rs
src/storage/: memory.rs
